// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`bundle utilities > addTypeScriptBundleTarget > should add disableTreeShake function and plugins when AWS SDK is not external 1`] = `
"import { defineConfig } from 'rolldown';

// Disables tree-shaking for the given module patterns
const disableTreeShake = (patterns: RegExp[]) => ({
  name: 'disable-treeshake',
  transform: (code, id) => {
    if (patterns.some(p => p.test(id))) {
      return { code, map: null, moduleSideEffects: 'no-treeshake' };
    }
    return null;
  },
});

export default defineConfig([{
        tsconfig: 'tsconfig.lib.json',
        input: 'src/index.ts',
        output: {
            file: '../../dist/apps/test-project/bundle/index.js',
            format: 'cjs',
            inlineDynamicImports: true
        },
        platform: 'node',
        plugins: [disableTreeShake([/@aws-sdk\\/.*/])]
    }]);
"
`;

exports[`bundle utilities > addTypeScriptBundleTarget > should not add disableTreeShake or plugins when AWS SDK is external as regex 1`] = `
"import { defineConfig } from 'rolldown';

export default defineConfig([{
        tsconfig: 'tsconfig.lib.json',
        input: 'src/index.ts',
        output: {
            file: '../../dist/apps/test-project/bundle/index.js',
            format: 'cjs',
            inlineDynamicImports: true
        },
        platform: 'node',
        external: [/@aws-sdk\\/.*/]
    }]);
"
`;
